--- a/USARTAss/USARTAss.vcxproj
+++ b/USARTAss/USARTAss.vcxproj
@@ -104,6 +104,9 @@
     <QtMoc Include="Chart.h" />
     <ClInclude Include="SerialInfo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
