--- a/USARTAss/USARTAss.vcxproj.filters
+++ b/USARTAss/USARTAss.vcxproj.filters
@@ -57,4 +57,7 @@
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
