--- a/MySoftware/CMakeLists.txt
+++ b/MySoftware/CMakeLists.txt
@@ -6,7 +6,6 @@ include(qt.cmake)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
 # 全局包含路径（所有目标生效）
 include_directories(
     "${CMAKE_CURRENT_BINARY_DIR}/MySoftware_autogen/include"
@@ -15,12 +14,12 @@ include_directories(
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR}
     COMPONENTS
-        Core
-        Gui
-        Widgets
-        Charts
-        SerialPort
-        QuickDialogs
+    Core
+    Gui
+    Widgets
+    Charts
+    SerialPort
+    QuickDialogs
 )
 set(CMAKE_AUTOUIC ON)
 qt_standard_project_setup()
@@ -38,30 +37,23 @@ set(PROJECT_SOURCES
     USARTAss.h
 )
 
-# 原始内容：
-# qt_add_executable(${PROJECT_NAME}  CONSOLE  ${PROJECT_SOURCES})
-
-# // 修改后的内容：
 qt_add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
 
-# // 显式设置链接器标志以启用控制台
+# 显式设置链接器标志以启用控制台
 if(WIN32)
     target_link_options(${PROJECT_NAME} PRIVATE "/SUBSYSTEM:CONSOLE")
 endif()
 
-
-
 target_include_directories(${PROJECT_NAME}
     PRIVATE
-        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_autogen/include
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_autogen/include
 )
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
-        Qt::Core
-        Qt::Gui
-        Qt::Widgets
-        Qt::Charts
-        Qt::SerialPort
-        #Qt::QuickDialogs
+    Qt::Core
+    Qt::Gui
+    Qt::Widgets
+    Qt::Charts
+    Qt::SerialPort
 )
